<resources>
    <string name="app_name">Calcu</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="sumar">+</string>
    <string name="restar">-</string>
    <string name="multiplicar">X</string>
    <string name="dividir">/</string>
    <string name="igual">=</string>
    <string name="cero">0</string>
    <string name="clear">Limpiar</string>
</resources>