<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8CFA74"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="411dp"
        android:layout_height="211dp"
        android:text="0"
        android:textColor="#000000"
        android:textSize="150sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="441dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/siete"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/ocho"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/nueve"
                android:textColor="#000000"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/cuatro"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/cinco"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/seis"
                android:textColor="#000000"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/uno"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/dos"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/tres"
                android:textColor="#000000"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/sumar"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/cero"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/restar"
                android:textColor="#000000"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/multiplicar"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/igual"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/dividir"
                android:textColor="#000000"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button18"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_span="3"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/clear"
                android:textColor="#000000"
                android:textSize="34sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>